test/types/range/bradc/promoteRange.good
promoteRange.chpl:1: error: Ranges defined using bounds of type 'int(64)..range(int(64),both,false)' are not currently supported
