test/types/range/bradc/promoteRange.chpl
var r = 1..3..6;
var r2 = 1..(3..6);

writeln("r is: ", r);
writeln("r2 is: ", r2);
